--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+
+
+//Alterado a partir daqui
+  "ConnectionStrings": {
+    "DatabaseConnection": "Data Source=(DESCRIPTION = (ADDRESS_LIST = (ADDRESS = (PROTOCOL = TCP)(HOST = oracle.fiap.com.br)(PORT = 1521)))(CONNECT_DATA = (SID = orcl)));Persist Security Info=True;User ID= RM550576;Password=230794;Pooling=True;Connection Timeout=60;"
+  },
+  "AllowedHosts": "*"
 }
+
