--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -29,12 +29,26 @@ jobs:
         push: true
         tags: davi0023/fiap.web.challenge:latest
 
-  deploy:
+    deploy:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - name: Deploy to Staging
-      run: echo "Deploying to Staging"
-    
-    - name: Deploy to Production
-      run: echo "Deploying to Production"
+    - name: Checkout repository
+      uses: actions/checkout@v2
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Pull the latest image
+      run: docker pull davi0023/fiap.web.challenge:latest
+
+    - name: Deploy with Docker Compose
+      run: |
+        docker-compose up -d
+
