--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -31,7 +31,6 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
-
     needs: build
     steps:
     - name: Checkout repository
@@ -46,10 +45,14 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Install Docker Compose
+      run: |
+        sudo apt-get update
+        sudo apt-get install docker-compose -y
+
     - name: Pull the latest image
       run: docker pull davi0023/fiap.web.challenge:latest
 
     - name: Deploy with Docker Compose
       run: |
         docker-compose up -d
-
